v3.0.0
Quarkus 3.27 + InfluxDB 3